# home-assistant-anova-nano

./: .devcontainer.json  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
custom_components/anova_nano/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  sensor.py  switch.py
custom_components/anova_nano/translations/: en.json
scripts/: setup
tests/: __init__.py  conftest.py  const.py  test_binary_sensor.py  test_config_flow.py  test_init.py  test_number.py  test_sensor.py
