[project]
name = "hacs-anova-nano"
requires-python = ">=3.12"
version = "0.6.2"
authors = [
  { name="Mitja Muller-Jend", email="mitja.muellerjend+github@gmail.com" },
  { name="Matt Colyer", email="matt@colyer.name" },
]
dependencies = [
    "async-timeout>=4.0.3",
    "homeassistant==2024.10.0",
    "pyanova-nano==0.2.3",
    "pyserial>=3.5",
    "pyudev>=0.24.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ['custom_components']

[tool.uv]
dev-dependencies = [
    "colorlog==6.8.2",
    "python-lsp-ruff==2.2.2",
    "python-lsp-server==1.12.0",
    "ruff==0.6.9",
    "pytest-homeassistant-custom-component",
    "uv>=0.4.15",
    "pyudev>=0.24.3",
]
